--- a/src/oodj_assignment/GUI_Add_pr.form
+++ b/src/oodj_assignment/GUI_Add_pr.form
@@ -42,11 +42,11 @@
                                   <Component id="txtQuantity" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
                                   <Component id="jLabel2" alignment="0" min="-2" pref="73" max="-2" attributes="0"/>
                                   <Group type="102" alignment="0" attributes="0">
-                                      <Component id="comboboxDay" min="-2" pref="56" max="-2" attributes="0"/>
+                                      <Component id="cmbDay" min="-2" pref="56" max="-2" attributes="0"/>
                                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                      <Component id="comboboxMonth" min="-2" max="-2" attributes="0"/>
+                                      <Component id="cmbMonth" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="comboboxYear" min="-2" pref="71" max="-2" attributes="0"/>
+                                      <Component id="cmbYear" min="-2" pref="71" max="-2" attributes="0"/>
                                   </Group>
                                   <Group type="102" alignment="0" attributes="0">
                                       <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
@@ -84,9 +84,9 @@
               <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="comboboxDay" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="comboboxMonth" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="comboboxYear" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="cmbDay" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="cmbMonth" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="cmbYear" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -157,7 +157,7 @@
         </Component>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JComboBox" name="comboboxMonth">
+    <Component class="javax.swing.JComboBox" name="cmbMonth">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="12">
@@ -180,7 +180,7 @@
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
     </Component>
-    <Component class="javax.swing.JComboBox" name="comboboxYear">
+    <Component class="javax.swing.JComboBox" name="cmbYear">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="24">
@@ -220,7 +220,7 @@
         <Property name="text" type="java.lang.String" value="Date:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JComboBox" name="comboboxDay">
+    <Component class="javax.swing.JComboBox" name="cmbDay">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="31">
